// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`carousel > passes through additional html attributes 1`] = `
<div
  aria-roledescription="Carousel"
  class="carousel class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="group"
  style="color:red"
  type="number"
>
  <div
    class="carousel__container carousel__container--controls-disabled"
    id="s0-container"
  >
    <button
      aria-disabled="true"
      aria-label="Previous Slide"
      class="carousel__control carousel__control--prev"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-left-16"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.293 8.708a1 1 0 0 1 0-1.415l6-6a1 1 0 0 1 1.414 1.414L5.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414l-6-6Z"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-left-16"
        />
      </svg>
    </button>
    <div
      class="carousel__viewport"
    >
      <ul
        class="carousel__list"
        id="s0-list"
      />
    </div>
    <button
      aria-disabled="true"
      aria-label="Next Slide"
      class="carousel__control carousel__control--next"
      id="s0-next"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-right-16"
            viewBox="0 0 16 16"
          >
            <path
              d="m12.707 8.707-6 6a1 1 0 0 1-1.414-1.414L10.586 8 5.293 2.707a1 1 0 0 1 1.414-1.414l6 6a1 1 0 0 1 0 1.414Z"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-right-16"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`carousel > passes through additional html attributes 2`] = `
<div
  aria-roledescription="Carousel"
  class="carousel class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="group"
  style="color:red"
  type="number"
>
  <div
    class="carousel__container carousel__container--controls-disabled"
    id="s0-container"
  >
    <button
      aria-disabled="true"
      aria-label="Previous Slide"
      class="carousel__control carousel__control--prev"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-left-16"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.293 8.708a1 1 0 0 1 0-1.415l6-6a1 1 0 0 1 1.414 1.414L5.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414l-6-6Z"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-left-16"
        />
      </svg>
    </button>
    <div
      class="carousel__viewport"
    >
      <ul
        class="carousel__list"
        id="s0-list"
      />
    </div>
    <button
      aria-disabled="true"
      aria-label="Next Slide"
      class="carousel__control carousel__control--next"
      id="s0-next"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-right-16"
            viewBox="0 0 16 16"
          >
            <path
              d="m12.707 8.707-6 6a1 1 0 0 1-1.414-1.414L10.586 8 5.293 2.707a1 1 0 0 1 1.414-1.414l6 6a1 1 0 0 1 0 1.414Z"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-right-16"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`carousel > passes through additional html attributes from child item 1`] = `
<li
  class="carousel__snap-point class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
/>
`;

exports[`carousel > passes through additional html attributes from child item 2`] = `
<li
  class="carousel__snap-point class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
/>
`;

exports[`carousel > with discrete items per slide > renders base version 1`] = `
<div
  aria-roledescription="Carousel"
  class="carousel carousel--slides carousel--peek"
  role="group"
>
  <div
    class="carousel__container carousel__container--controls-disabled"
    id="s0-container"
  >
    <button
      aria-disabled="true"
      aria-label="prev"
      class="carousel__control carousel__control--prev"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-left-16"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.293 8.708a1 1 0 0 1 0-1.415l6-6a1 1 0 0 1 1.414 1.414L5.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414l-6-6Z"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-left-16"
        />
      </svg>
    </button>
    <div
      class="carousel__viewport"
    >
      <ul
        class="carousel__list"
        id="s0-list"
      />
    </div>
    <button
      aria-disabled="true"
      aria-label="next"
      class="carousel__control carousel__control--next"
      id="s0-next"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-right-16"
            viewBox="0 0 16 16"
          >
            <path
              d="m12.707 8.707-6 6a1 1 0 0 1-1.414-1.414L10.586 8 5.293 2.707a1 1 0 0 1 1.414-1.414l6 6a1 1 0 0 1 0 1.414Z"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-right-16"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`carousel > with discrete items per slide > renders base version 2`] = `null`;

exports[`carousel > with discrete items per slide > renders base version 3`] = `null`;

exports[`carousel > with discrete items per slide > renders base version 4`] = `null`;

exports[`carousel > with discrete items per slide > renders without any provided items 1`] = `
<button
  aria-disabled="true"
  aria-label="prev"
  class="carousel__control carousel__control--prev"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-chevron-left-16"
        viewBox="0 0 16 16"
      >
        <path
          d="M3.293 8.708a1 1 0 0 1 0-1.415l6-6a1 1 0 0 1 1.414 1.414L5.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414l-6-6Z"
        />
      </symbol>
    </defs>
    <use
      href="#icon-chevron-left-16"
    />
  </svg>
</button>
`;

exports[`carousel > with discrete items per slide > renders without any provided items 2`] = `
<button
  aria-disabled="true"
  aria-label="next"
  class="carousel__control carousel__control--next"
  id="s0-next"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-chevron-right-16"
        viewBox="0 0 16 16"
      >
        <path
          d="m12.707 8.707-6 6a1 1 0 0 1-1.414-1.414L10.586 8 5.293 2.707a1 1 0 0 1 1.414-1.414l6 6a1 1 0 0 1 0 1.414Z"
        />
      </symbol>
    </defs>
    <use
      href="#icon-chevron-right-16"
    />
  </svg>
</button>
`;

exports[`carousel > with discrete items per slide > with autoplay enabled > renders base version 1`] = `null`;

exports[`carousel > with discrete items per slide > with autoplay enabled > renders paused version 1`] = `null`;

exports[`carousel > with discrete items per slide > with hidden scrollbar > renders 1`] = `
<div
  aria-roledescription="Carousel"
  class="carousel carousel--hidden-scrollbar carousel--slides carousel--peek"
  role="group"
>
  <div
    class="carousel__container carousel__container--controls-disabled"
    id="s0-container"
  >
    <button
      aria-disabled="true"
      aria-label="prev"
      class="carousel__control carousel__control--prev"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-left-16"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.293 8.708a1 1 0 0 1 0-1.415l6-6a1 1 0 0 1 1.414 1.414L5.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414l-6-6Z"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-left-16"
        />
      </svg>
    </button>
    <div
      class="carousel__viewport"
    >
      <ul
        class="carousel__list"
        id="s0-list"
      />
    </div>
    <button
      aria-disabled="true"
      aria-label="next"
      class="carousel__control carousel__control--next"
      id="s0-next"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-right-16"
            viewBox="0 0 16 16"
          >
            <path
              d="m12.707 8.707-6 6a1 1 0 0 1-1.414-1.414L10.586 8 5.293 2.707a1 1 0 0 1 1.414-1.414l6 6a1 1 0 0 1 0 1.414Z"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-right-16"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`carousel > without items per slide (continuous) > renders base version 1`] = `null`;

exports[`carousel > without items per slide (continuous) > renders base version 2`] = `
<button
  aria-disabled="true"
  aria-label="prev"
  class="carousel__control carousel__control--prev"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-chevron-left-16"
        viewBox="0 0 16 16"
      >
        <path
          d="M3.293 8.708a1 1 0 0 1 0-1.415l6-6a1 1 0 0 1 1.414 1.414L5.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414l-6-6Z"
        />
      </symbol>
    </defs>
    <use
      href="#icon-chevron-left-16"
    />
  </svg>
</button>
`;

exports[`carousel > without items per slide (continuous) > renders base version 3`] = `
<button
  aria-disabled="true"
  aria-label="next"
  class="carousel__control carousel__control--next"
  id="s0-next"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-chevron-right-16"
        viewBox="0 0 16 16"
      >
        <path
          d="m12.707 8.707-6 6a1 1 0 0 1-1.414-1.414L10.586 8 5.293 2.707a1 1 0 0 1 1.414-1.414l6 6a1 1 0 0 1 0 1.414Z"
        />
      </symbol>
    </defs>
    <use
      href="#icon-chevron-right-16"
    />
  </svg>
</button>
`;

exports[`carousel > without items per slide (continuous) > renders base version 4`] = `null`;

exports[`carousel > without items per slide (continuous) > renders base version 5`] = `null`;

exports[`carousel > without items per slide (continuous) > renders base version 6`] = `null`;

exports[`carousel > without items per slide (continuous) > renders base version 7`] = `null`;

exports[`carousel > without items per slide (continuous) > renders base version 8`] = `null`;

exports[`carousel > without items per slide (continuous) > renders base version 9`] = `null`;

exports[`carousel > without items per slide (continuous) > renders without any provided items 1`] = `
<button
  aria-disabled="true"
  aria-label="prev"
  class="carousel__control carousel__control--prev"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-chevron-left-16"
        viewBox="0 0 16 16"
      >
        <path
          d="M3.293 8.708a1 1 0 0 1 0-1.415l6-6a1 1 0 0 1 1.414 1.414L5.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414l-6-6Z"
        />
      </symbol>
    </defs>
    <use
      href="#icon-chevron-left-16"
    />
  </svg>
</button>
`;

exports[`carousel > without items per slide (continuous) > renders without any provided items 2`] = `
<button
  aria-disabled="true"
  aria-label="next"
  class="carousel__control carousel__control--next"
  id="s0-next"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-chevron-right-16"
        viewBox="0 0 16 16"
      >
        <path
          d="m12.707 8.707-6 6a1 1 0 0 1-1.414-1.414L10.586 8 5.293 2.707a1 1 0 0 1 1.414-1.414l6 6a1 1 0 0 1 0 1.414Z"
        />
      </symbol>
    </defs>
    <use
      href="#icon-chevron-right-16"
    />
  </svg>
</button>
`;
